src/component/title_card/snapshots/envision__component__title_card__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/title_card/tests.rs
expression: terminal.backend().to_string()
---
                              
            My App            
             v1.0
