src/component/title_card/snapshots/envision__component__title_card__tests__view_disabled.snap
---
source: src/component/title_card/tests.rs
assertion_line: 284
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│            Disabled Title            │
│                                      │
└──────────────────────────────────────┘
