src/component/title_card/snapshots/envision__component__title_card__tests__view_no_border.snap
---
source: src/component/title_card/tests.rs
assertion_line: 296
expression: terminal.backend().to_string()
---
                                        
                                        
                No Border
