src/component/title_card/snapshots/envision__component__title_card__tests__view_prefix_suffix.snap
---
source: src/component/title_card/tests.rs
assertion_line: 272
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│             🚀  My App ✨              │
│                                      │
└──────────────────────────────────────┘
