src/component/title_card/snapshots/envision__component__title_card__tests__view_small_area.snap
---
source: src/component/title_card/tests.rs
assertion_line: 308
expression: terminal.backend().to_string()
---
┌─────────────┐
│    Title    │
│     Sub     │
└─────────────┘
