src/component/title_card/snapshots/envision__component__title_card__tests__view_with_subtitle.snap
---
source: src/component/title_card/tests.rs
assertion_line: 258
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│            My Application            │
│              Version 1.0             │
│                                      │
└──────────────────────────────────────┘
